--- a/synthesis.ui
+++ b/synthesis.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>727</width>
+    <height>349</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,12 +24,16 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLineEdit" name="lineEdit"/>
+      <widget class="QLineEdit" name="pcfName"/>
      </item>
      <item row="0" column="2">
-      <widget class="QToolButton" name="toolButton">
+      <widget class="QToolButton" name="pcfBtn">
        <property name="text">
         <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="data.qrc">
+         <normaloff>:/icons/memory.svg</normaloff>:/icons/memory.svg</iconset>
        </property>
       </widget>
      </item>
@@ -48,6 +52,10 @@
        <property name="text">
         <string>...</string>
        </property>
+       <property name="icon">
+        <iconset resource="data.qrc">
+         <normaloff>:/icons/memory.svg</normaloff>:/icons/memory.svg</iconset>
+       </property>
       </widget>
      </item>
     </layout>
@@ -55,9 +63,16 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="addFileBtn">
        <property name="text">
         <string>Add file</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="removeSelBtn">
+       <property name="text">
+        <string>Remove selected</string>
        </property>
       </widget>
      </item>
@@ -71,7 +86,7 @@
      <item>
       <widget class="QPushButton" name="pushButton_3">
        <property name="text">
-        <string>Synthesis</string>
+        <string>Synthesize</string>
        </property>
        <property name="icon">
         <iconset resource="data.qrc">
@@ -82,17 +97,46 @@
     </layout>
    </item>
    <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
+    <widget class="QScrollArea" name="scrollArea">
+     <property name="widgetResizable">
+      <bool>true</bool>
      </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
      </property>
-    </spacer>
+     <widget class="QWidget" name="scrollAreaWidgetContents">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>703</width>
+        <height>219</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <layout class="QVBoxLayout" name="fileListLayout">
+         <property name="spacing">
+          <number>2</number>
+         </property>
+        </layout>
+       </item>
+       <item>
+        <spacer name="verticalSpacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </widget>
+    </widget>
    </item>
   </layout>
  </widget>
