--- a/synthesis.ui
+++ b/synthesis.ui
@@ -84,7 +84,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_3">
+      <widget class="QPushButton" name="synthBtn">
        <property name="text">
         <string>Synthesize</string>
        </property>
