--- a/data.qrc
+++ b/data.qrc
@@ -5,5 +5,10 @@
         <file>icons/cog.svg</file>
         <file>icons/usb-port.svg</file>
         <file>icons/file-document-remove.svg</file>
+        <file>icons/folder-open.svg</file>
+        <file>icons/view-module.svg</file>
+        <file>icons/play.svg</file>
+        <file>icons/book-remove.svg</file>
+        <file>icons/book-remove-multiple.svg</file>
     </qresource>
 </RCC>
