--- a/data.qrc
+++ b/data.qrc
@@ -10,5 +10,6 @@
         <file>icons/play.svg</file>
         <file>icons/book-remove.svg</file>
         <file>icons/book-remove-multiple.svg</file>
+        <file>config/support.json</file>
     </qresource>
 </RCC>
