--- a/synthesis.ui
+++ b/synthesis.ui
@@ -17,7 +17,7 @@
    <item>
     <layout class="QGridLayout" name="gridLayout">
      <item row="1" column="1">
-      <widget class="QLineEdit" name="lineEdit_2">
+      <widget class="QLineEdit" name="topLevelLine">
        <property name="text">
         <string>fpga_top</string>
        </property>
@@ -108,7 +108,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="lineEdit">
+      <widget class="QLineEdit" name="packageLine">
        <property name="text">
         <string>sg48</string>
        </property>
@@ -148,7 +148,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="removeAllBtn">
        <property name="text">
         <string>Remove all</string>
        </property>
