Add Linux support

--- a/src/fancybutton.ui
+++ b/src/fancybutton.ui
@@ -44,6 +44,11 @@
    </item>
    <item>
     <widget class="QLabel" name="label">
+     <property name="font">
+      <font>
+       <pointsize>8</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>text_placeholder</string>
      </property>
